@@ -10,7 +10,7 @@ use Test::More tests => 6;
 use Catalyst::Test 'TestApp';
 
 # test altenate root dirs
-TestApp->config->{static}->{include_path} = [
+TestApp->config->{'Plugin::Static::Simple'}->{include_path} = [
     TestApp->config->{root} . '/overlay',
     \&TestApp::incpath_generator,
     TestApp->config->{root},
