@@ -1,5 +1,8 @@
 Revision history for Perl extension Catalyst::Plugin::Static::Simple
 
+        - Change configuration key to 'Plugin::Static::Simple' by default.
+          The old 'static' key is still supported, but issues a warning.
+
 0.30   2011-02-xx hh:mm:00
         - Add Cache-Control:public header
         - Optionally provide Expires header
